<resources>
    <string name="app_name">HostHotel</string>
    <string name="edt_pass">Contraseña</string>
    <string name="edt_confirmPass">Confirmar Contraseña</string>
    <string name="edt_name">Nombre</string>
    <string name="edt_city">Ciudad</string>
    <string name="edt_street">Calle</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_remember">Recordar Constraseña</string>
    <string name="btn_regain">Recuperar Constraseña</string>
    <string name="btn_send">Enviar Email</string>
    <string name="btn_add">Añadir</string>
    <string name="btn_editHotel">Editar</string>
    <string name="btn_loguot">Cerrar Sesión</string>
    <string name="btn_google">Entrar con google</string>
    <string name="btn_signIn">Entrar</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_options">Configuración</string>
    <string name="btn_saves">Guardados</string>
    <string name="btn_list">Lista de reseñas</string>
    <string name="btn_info">Información</string>

    <string name="select_language">Selecciona un idioma</string>
    <string-array name="languages">
        <item>English</item>
        <item>Español</item>
    </string-array>
    <string-array name="language_codes">
        <item>en</item>
        <item>es</item>
    </string-array>

    <string-array name="cities_array">
        <item>Sevilla</item>
        <item>Málaga</item>
        <item>Cádiz</item>
        <item>Granada</item>
        <item>Córdoba</item>
        <item>Almería</item>
        <item>Huelva</item>
        <item>Jaén</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edt_email" translatable="false">Email</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="edt_info">Información</string>
    <string name="edt_Url">Url de la Imagen</string>
    <string name="txt_question">¿No tienes cuenta?</string>
    <string name="txt_notificaciones">Notificaciones</string>
    <string name="txt_opcionNotifi">Activar notificaciones</string>
    <string name="txt_opcionTheme">Cambiar tema</string>
    <string name="txt_claro">Claro</string>
    <string name="txt_oscuro">Oscuro</string>
    <string name="txt_activarNotif">Activar</string>
    <string name="txt_desactivarNotif">Desactivar</string>
    <string name="txt_idioma">Idioma</string>
    <string name="txt_theme">Tema</string>
    <string name="txt_addHotel">Añadir Hotel</string>
    <string name="language_key">Idioma</string>
    <string name="language_saved_message">Idioma Guardado</string>
    <string name="ttl_about">Sobre nosotros</string>
    <string name="ttl_aplication">¿De qué trata?</string>
    <string name="ttl_dev">Desarrollador</string>
    <string name="txt_det_hotel">Hotel:</string>
    <string name="txt_det_city">Ciudad:</string>
    <string name="txt_det_street">Calle:</string>
    <string name="txt_det_info">Información adicional:</string>
    <string name="txt_edit_title">Editar Hotel</string>
    <string name="txt_reviews_ttl">Reseñas:</string>
    <string name="txt_img_reg">Imagen</string>
    <string name="txt_ape_reg">Apellidos</string>
    <string name="txt_write">Escribe tu reseña</string>
    <string name="txt_submit">Publicar</string>
    <string name="ttl_add_hotel">Add Hotel</string>
    <string name="ttl_review_user">Usuario:</string>
    <string name="ttl_review_date">Fecha:</string>
    <string name="ttl_review_rev">Reseña:</string>
    <string name="add_success">Hotel añadido correctamente</string>
    <string name="add_error">Error al añadir el hotel</string>
    <string name="write_full">Por favor, completa todos los campos</string>
    <string name="ttl_confirm_delete">Confirmar eliminación</string>
    <string name="ttl_ask_delete">¿Estás seguro de eliminar este hotel?</string>
    <string name="ttl_delete">Eliminar</string>
    <string name="ttl_delete_success">Hotel eliminado correctamente</string>
    <string name="ttl_delete_error">Error al eliminar el hotel</string>
    <string name="ttl_dont_fund">Hotel no encontrado</string>
    <string name="ttl_close_prof">Cerrar Sesión</string>
    <string name="ttl_close_ask">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="ttl_close_success">Sesión cerrada correctamente</string>
    <string name="ttl_yes">Sí</string>
    <string name="ttl_no">No</string>
    <string name="txt_log">Ingrese correo y contraseña</string>
    <string name="txt_log_success">Autenticación exitosa</string>
    <string name="txt_log_verify">Verifique su correo</string>
    <string name="txt_log_error">Error de email y/o contraseña</string>
    <string name="txt_user_success">Usuario registrado correctamente</string>
    <string name="txt_pass_error">Error en las contraseñas</string>
    <string name="txt_rellenar">Rellene los campos</string>
    <string name="txt_url_success">URL de la imagen de perfil guardada correctamente</string>
    <string name="txt_account_success">Cuenta creada correctamente, se requiere verificación</string>
    <string name="txt_user_error">Error al establecer el nombre de usuario</string>
    <string name="txt_pass_change">Correo de cambido de contraseña enviado</string>
    <string name="txt_process_error">Error, no se puedo completar el proceso</string>
    <string name="txt_chang_applied">Cambios aplicados</string>
    <string name="Developer" translatable="false">Sergio Morales García</string>
    <string name="txt_follow">Síguenos</string>
    <string name="txt_aboutUs">Esta aplicación se ha desarrollado para el trabajo de final de grado del curso de 2º de Desarrollo de Aplicaciones Multiplataforma, del C.P.I.F.P. Málaga Tech Park.</string>
    <string name="txt_aboutAplication">Este proyecto se basa en un foro de hoteles en el que los usuarios pueden añadir hoteles en los que han estado y puntuarlos con estrellas y con una reseña. Los hoteles pertenecen a la comunidad de Andalucía y pueden ser filtrados por las ciudades que se encuentran dentro de la misma.</string>


</resources>