<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".login.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="391dp"
        android:layout_height="191dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hotel" />

    <EditText
        android:id="@+id/edtEmailNuevo"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtApellidos" />

    <EditText
        android:id="@+id/edtImagenPerfil"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="Imagen"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailNuevo" />

    <EditText
        android:id="@+id/edtPasswordNuevo2"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="@string/edt_confirmPass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordNuevo1" />

    <EditText
        android:id="@+id/edtPasswordNuevo1"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="@string/edt_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtImagenPerfil" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="#A57C00"
        android:text="@string/btn_cancel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordNuevo2" />

    <Button
        android:id="@+id/btnCrearCuentaNueva"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/boton"
        android:text="@string/btn_register"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordNuevo2" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="212dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="@string/edt_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtApellidos"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="Apellidos"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

</androidx.constraintlayout.widget.ConstraintLayout>