<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="Add Hotel"
        android:textColor="#A57C00"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="220dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="@string/edt_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCrearCuentaNueva"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/boton"
        android:text="Add"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordNuevo2" />

    <EditText
        android:id="@+id/edtEmailNuevo"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="@string/edt_city"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

    <EditText
        android:id="@+id/edtPasswordNuevo1"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="@string/edt_Url"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailNuevo" />

    <EditText
        android:id="@+id/edtPasswordNuevo2"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/backText"
        android:ems="10"
        android:hint="@string/edt_info"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordNuevo1" />

</androidx.constraintlayout.widget.ConstraintLayout>